end of day update push

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,4 +1,4 @@
-title: "Workshop title"
+title: "State-Space Methods for Testing Hypotheses About Environmental Drivers and Biotic Interactions in Community and Paleoecological Time Series"
 author:
   name: "Quinn Asena, Jack Williams, and Tony Ives"
 date: today
